# yt-transcript-mcp

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_http.py  server.json  smithery.yaml
.github/workflows/: ci.yml
src/yt_transcript_mcp/: __init__.py  __main__.py  cache.py  config.py  models.py  server.py  utils.py
src/yt_transcript_mcp/providers/: __init__.py  backend.py  base.py  standalone.py
tests/: conftest.py  test_backend.py  test_cache.py  test_server.py  test_standalone.py  test_tools.py  test_utils.py
