[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yt-transcript-mcp"
version = "1.0.0"
description = "MCP server for YouTube transcript extraction, search, and analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Alex Zimmermann"}]
keywords = ["mcp", "youtube", "transcript", "claude", "ai", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "mcp[cli]>=1.8.0",
    "youtube-transcript-api>=1.0.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.0.0",
    "cachetools>=5.3.0",
]

[project.urls]
Homepage = "https://github.com/alex2zimmermann-ux/yt-transcript-mcp"
Repository = "https://github.com/alex2zimmermann-ux/yt-transcript-mcp"
Issues = "https://github.com/alex2zimmermann-ux/yt-transcript-mcp/issues"

[project.scripts]
yt-transcript-mcp = "yt_transcript_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/yt_transcript_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.22.0",
    "pytest-cov>=6.0",
]
